# cowsay_django

./: README.md  pyproject.toml
cowsay_django/: settings.py  urls.py
moo/: admin.py  forms.py  get_cow.py  models.py  urls.py  views.py
moo/migrations/: 0001_initial.py
moo/static/css/: moo.css
moo/templates/: base.html  index.html  moo_form.html  moo_list.html
static/css/: moo.css
